feat: Criar classe UsuarioDAO, criar metodo cadastrarUsuario. Adicionar dependencias no pom.xml, org.slf4j.Logger, org.slf4j.LoggerFactory, org.mindrot.jbcrypt.BCrypt.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,25 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.34</version>
         </dependency>
+
+        <!-- Criptografia de senhas - BCrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <!-- implementação do Logback - executa o logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <!-- implementação do Logback - executa o logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.8</version>
+        </dependency>
     </dependencies>
 
     <build>
