config: Configuracao de variavel de ambiente para a senha do banco de dados

--- a/AppCFP/pom.xml
+++ b/AppCFP/pom.xml
@@ -19,13 +19,6 @@
     <dependencies>
         <!-- Servlet API -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0.0</version>
@@ -86,6 +79,12 @@
                     <webApp>
                         <contextPath>/</contextPath>
                     </webApp>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>DB_PASSWORD_POSTGRES</name>
+                            <value>${env.DB_PASSWORD_POSTGRES}</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
 
@@ -104,7 +103,5 @@
         </plugins>
 
     </build>
-
-
 
 </project>
