--- a/AppCFP/src/main/webapp/WEB-INF/web.xml
+++ b/AppCFP/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
                              https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-         version="5.0">
+         version="5.0" metadata-complete="false">
 
     <display-name>Controle Financeiro Pessoal</display-name>
 
